src/objects/Communities__c.object
<CustomObject>
    <description>This is to capture all the variations and contacts of communities.</description>
    <fields>
        <fullName>Active_PACE_Programs__c</fullName>
        <description>All PACE Programs active in this community</description>
        <inlineHelpText>All PACE Programs active in this community</inlineHelpText>
        <label>Active PACE Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PACE_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Government__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City Government</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communities</relationshipLabel>
        <relationshipName>Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communities (Consultant)</relationshipLabel>
        <relationshipName>Communities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>Communities__c</referenceTo>
        <relationshipLabel>Communities (County)</relationshipLabel>
        <relationshipName>Communities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County Deprecated</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AccTypeNew__c</field>
                <operation>equals</operation>
                <value>County</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communities (County)</relationshipLabel>
        <relationshipName>County</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Program_Approved__c</fullName>
        <description>Date CF was approved to transact in this community with the primary program.</description>
        <inlineHelpText>Date CF was approved to transact in this community with the primary program.</inlineHelpText>
        <label>Date Program Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Program_Presented__c</fullName>
        <description>Date program was presented to this community</description>
        <label>Date Program Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_Special_Conditions__c</fullName>
        <description>Any unique or special conditions about PACE in this community</description>
        <inlineHelpText>Any unique or special conditions about PACE in this community</inlineHelpText>
        <label>Details &amp; Special Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>League_of_Cities_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>League of Cities Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communities (League of Cities Rep)</relationshipLabel>
        <relationshipName>Communities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Lobbying_Law__c</fullName>
        <description>Link to text of lobbying law, if it exists, for this jurisdiction.</description>
        <inlineHelpText>Link to text of lobbying law, if it exists, for this jurisdiction.</inlineHelpText>
        <label>Link to Lobbying Law</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lobbying_Law__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not legislation surrounding/restricting lobbying activities exists in this jurisdiction.</description>
        <inlineHelpText>Whether or not legislation surrounding/restricting lobbying activities exists in this jurisdiction.</inlineHelpText>
        <label>Lobbying Law?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenPACEOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OpenPACE Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PACE_Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PACE Municipality</label>
        <referenceTo>Communities__c</referenceTo>
        <relationshipLabel>Communities (PACE Municipality)</relationshipLabel>
        <relationshipName>Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation_Agreement_Link__c</fullName>
        <description>Weblink to Community&apos;s agreement to participate.</description>
        <inlineHelpText>Weblink to Community&apos;s agreement to participate.</inlineHelpText>
        <label>Participation Agreement Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Participation_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participation Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <description>Population of this community.</description>
        <inlineHelpText>Population of this community.</inlineHelpText>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communities</relationshipLabel>
        <relationshipName>Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_OpenPACE_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary OpenPACE Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communities (Primary OpenPACE Rep)</relationshipLabel>
        <relationshipName>Communities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_PACE_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CF&apos;s Primary PACE Program in this community.</description>
        <inlineHelpText>CF&apos;s Primary PACE Program in this community.</inlineHelpText>
        <label>Primary PACE Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Communities</relationshipLabel>
        <relationshipName>Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff #1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communities (Staff #1)</relationshipLabel>
        <relationshipName>Communities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>Communities__c</referenceTo>
        <relationshipLabel>Communities (State)</relationshipLabel>
        <relationshipName>Communities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_of_Primary_Program__c</fullName>
        <description>Status of CF&apos;s engagement with primary program</description>
        <inlineHelpText>Status of CF&apos;s engagement with primary program</inlineHelpText>
        <label>Status of Primary Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>In Discussion</fullName>
                </value>
                <value>
                    <fullName>Agenda Date</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved (Pending Conditions)</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Community__c</fullName>
        <description>What type of Community this is!</description>
        <inlineHelpText>What type of Community this is!</inlineHelpText>
        <label>Type of Community</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unincorporated Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unincorporated_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unincorporated Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRCOG_OptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a municipality in WRCOG territory?</description>
        <inlineHelpText>Is a municipality in WRCOG territory?</inlineHelpText>
        <label>WRCOG Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <label>Communities</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Communities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>